--- a/calc(100_days_of_python).ipynb
+++ b/calc(100_days_of_python).ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNP/xfck5I5UJ0czwnqir2G",
+      "authorship_tag": "ABX9TyPWZmMv1qFfjC9GhR4WBPCQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -99,7 +99,7 @@
       "source": [
         "#helped by gpt\n",
         "\n",
-        "a =input(\"enter the numbers \")\n",
+        "a =input(\"enter the calculation \")\n",
         "b = eval(a)\n",
         "print(\"your answer is\", b)\n"
       ],
